Renamed dewey's log file dewey.log

--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,6 +1,4 @@
 # The Id of the dewey instance
-dewey.id = unknown
-
 log4j.rootLogger = WARN, A1
 
 # Set the log level for dewey to INFO by default.
@@ -13,7 +11,7 @@ log4j.additivity.dewey = FALSE
 
 # The appender configuration.
 log4j.appender.A1 = org.apache.log4j.RollingFileAppender
-log4j.appender.A1.File=/var/log/dewey/dewey-${dewey.id}.log
+log4j.appender.A1.File=/var/log/dewey/dewey.log
 log4j.appender.A1.layout = org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern = %d %-5p %c: %m%n
 log4j.appender.A1.MaxFileSize=10MB
