Added org.apache.http option to log props.
Reorganized log files a bit to reflect common practices.

--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,6 +1,14 @@
 # The Id of the dewey instance
 log4j.rootLogger = WARN, A1
 
+# The appender configuration.
+log4j.appender.A1 = org.apache.log4j.RollingFileAppender
+log4j.appender.A1.File=/var/log/dewey/dewey.log
+log4j.appender.A1.layout = org.apache.log4j.PatternLayout
+log4j.appender.A1.layout.ConversionPattern = %d %-5p %c: %m%n
+log4j.appender.A1.MaxFileSize=10MB
+log4j.appender.A1.MaxBackupIndex=5
+
 # Set the log level for dewey to INFO by default.
 log4j.logger.dewey = INFO, A1
 log4j.additivity.dewey = FALSE
@@ -9,10 +17,4 @@ log4j.additivity.dewey = FALSE
 # log4j.logger.clojure-commons = DEBUG, A1
 # log4j.additivity.clojure-commons = FALSE
 
-# The appender configuration.
-log4j.appender.A1 = org.apache.log4j.RollingFileAppender
-log4j.appender.A1.File=/var/log/dewey/dewey.log
-log4j.appender.A1.layout = org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern = %d %-5p %c: %m%n
-log4j.appender.A1.MaxFileSize=10MB
-log4j.appender.A1.MaxBackupIndex=5
+log4j.logger.org.apache.http=WARN, A1
