--- a/dev-resources/log4j.properties
+++ b/dev-resources/log4j.properties
@@ -1,6 +1,11 @@
-log4j.rootLogger=WARN, A1
-log4j.logger.dewey=TRACE, A1
+log4j.rootLogger=WARN, stdout
+
 log4j.additivity.dewey = FALSE
-log4j.appender.A1=org.apache.log4j.ConsoleAppender
-log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=%d %-5p %c: %m%n
+
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d %-5p %c: %m%n
+
+log4j.logger.dewey=TRACE, stdout
+
+log4j.logger.org.apache.http=WARN
