--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,20 +1,17 @@
-# The Id of the dewey instance
-log4j.rootLogger = WARN, A1
+log4j.appender.DEFAULT = org.apache.log4j.RollingFileAppender
+log4j.appender.DEFAULT.File = /var/log/dewey/dewey.log
+log4j.appender.DEFAULT.layout = org.apache.log4j.PatternLayout
+log4j.appender.DEFAULT.layout.ConversionPattern = %d %-5p %c: %m%n
+log4j.appender.DEFAULT.MaxFileSize = 10MB
+log4j.appender.DEFAULT.MaxBackupIndex = 5
 
-# The appender configuration.
-log4j.appender.A1 = org.apache.log4j.RollingFileAppender
-log4j.appender.A1.File=/var/log/dewey/dewey.log
-log4j.appender.A1.layout = org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern = %d %-5p %c: %m%n
-log4j.appender.A1.MaxFileSize=10MB
-log4j.appender.A1.MaxBackupIndex=5
+log4j.rootLogger = WARN, DEFAULT
 
-# Set the log level for dewey to INFO by default.
-log4j.logger.dewey = INFO, A1
-log4j.additivity.dewey = FALSE
+log4j.logger.dewey = INFO
 
 # Uncomment these lines to enable debugging in iPlant Clojure Commons.
-# log4j.logger.clojure-commons = DEBUG, A1
-# log4j.additivity.clojure-commons = FALSE
+# log4j.logger.clojure-commons = DEBUG
 
-log4j.logger.org.apache.http=WARN, A1
+log4j.logger.org.apache.http = WARN
+
+log4j.logger.org.irods.jargon = WARN
