switched configuration logging level to INFO
Updated deploy log4j.properties so that configuration values are logged except for dewey, infosquito and monkey.

--- a/dev-resources/log4j.properties
+++ b/dev-resources/log4j.properties
@@ -1,11 +1,9 @@
-log4j.rootLogger=WARN, stdout
+log4j.appender.MAIN                          = org.apache.log4j.ConsoleAppender
+log4j.appender.MAIN.layout                   = org.apache.log4j.PatternLayout
+log4j.appender.MAIN.layout.ConversionPattern = %d %-5p %c: %m%n
 
-log4j.additivity.dewey = FALSE
+log4j.rootLogger = WARN, MAIN
 
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %-5p %c: %m%n
-
-log4j.logger.dewey=TRACE, stdout
-
-log4j.logger.org.apache.http=WARN
+log4j.logger.dewey                  = TRACE
+log4j.logger.clojure-commons.config = INFO
+log4j.logger.org.apache.http        = WARN
