--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.appender.DEFAULT = org.apache.log4j.RollingFileAppender
-log4j.appender.DEFAULT.File = /var/log/dewey/dewey.log
+log4j.appender.DEFAULT.File = /home/iplant/logs/dewey.log
 log4j.appender.DEFAULT.layout = org.apache.log4j.PatternLayout
 log4j.appender.DEFAULT.layout.ConversionPattern = %d %-5p %c: %m%n
 log4j.appender.DEFAULT.MaxFileSize = 10MB
