Dewey will by default use the IES default resource

--- a/dev-resources/local.properties
+++ b/dev-resources/local.properties
@@ -14,7 +14,7 @@ dewey.irods.port                = 1247
 dewey.irods.zone                = iplant
 dewey.irods.user                = rods
 dewey.irods.password            = rods
-dewey.irods.default-resource    = demoResc
+dewey.irods.default-resource    = ""
 dewey.irods.home                = /iplant/home/rods
 
 dewey.status.listen-port        = 8080
