Added the `dewey.amqp.queue.name` config prop
CORE-8813

--- a/dev-resources/local.properties
+++ b/dev-resources/local.properties
@@ -5,6 +5,7 @@ dewey.amqp.password             = guest
 dewey.amqp.exchange.name        = irods
 dewey.amqp.exchange.durable     = false
 dewey.amqp.exchange.auto-delete = true
+dewey.amqp.queue_name           = indexing.test
 
 dewey.es.host                   = localhost
 dewey.es.port                   = 9200
