Switch to using harbor for docker artifacts

--- a/k8s/dewey.yml
+++ b/k8s/dewey.yml
@@ -31,7 +31,7 @@ spec:
                 path: dewey.properties
       containers:
       - name: dewey
-        image: discoenv/dewey
+        image: harbor.cyverse.org/de/dewey
         resources:
           requests:
             cpu: "480m"
