--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -10,5 +10,5 @@ build:
   tagPolicy:
     gitCommit: {}
   artifacts:
-  - image: discoenv/dewey
+  - image: harbor.cyverse.org/de/dewey
   local: {}
