--- a/k8s/dewey.yml
+++ b/k8s/dewey.yml
@@ -7,6 +7,9 @@ spec:
   selector:
     matchLabels:
       de-app: dewey
+  strategy:
+    rollingUpdate:
+      maxSurge: 200%
   template:
     metadata:
       labels:
@@ -58,6 +61,16 @@ spec:
               configMapKeyRef:
                 name: java-tool-options
                 key: low
+          - name: OTEL_TRACES_EXPORTER
+            valueFrom:
+              secretKeyRef:
+                name: configs
+                key: OTEL_TRACES_EXPORTER
+          - name: OTEL_EXPORTER_JAEGER_ENDPOINT
+            valueFrom:
+              secretKeyRef:
+                name: configs
+                key: OTEL_EXPORTER_JAEGER_ENDPOINT
         ports:
           - name: listen-port
             containerPort: 60000
@@ -68,6 +81,14 @@ spec:
           initialDelaySeconds: 60
           periodSeconds: 20
           timeoutSeconds: 10
+        startupProbe:
+          httpGet:
+            path: /
+            port: 60000
+          initialDelaySeconds: 60
+          periodSeconds: 20
+          timeoutSeconds: 10
+          failureThreshold: 30
         readinessProbe:
           httpGet:
             path: /
